fix: fix missing icon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <div id="bloc_title">
                             <h1>UX – UI Designer</h1>
                             <p>Conception d’expérience utilisateur <br>& Design d’interface.</p>
-                            <div class="arrow"><img src="img/fleche-dark.svg" width="48px" height="95px" alt="">
+                            <div class="arrow"><img src="img/arow-down.svg" width="48px" height="95px" alt="">
                         </div>
                     </div>
                 </div>
